--- a/examples/tau2-bench/eval_config.yaml
+++ b/examples/tau2-bench/eval_config.yaml
@@ -8,25 +8,25 @@ eval:
     n_samples_per_eval_prompt: 4  # k=4 for pass@k
 
   datasets:
-    # Retail test with gpt-4o-mini (baseline) via OpenRouter
+    # Retail test with deepseek-v3.2 via OpenRouter
     - name: retail-test-deepseek-v3.2
-      path: ${DATA_DIR}/retail_test_tasks.jsonl@[0:10]
+      path: ${oc.env:DATA_DIR}/retail_test_tasks.jsonl@[0:10]
       metadata_overrides:
         user_model: openrouter/deepseek/deepseek-v3.2
         user_base_url: https://openrouter.ai/api/v1
         user_api_key_var: OPENROUTER_API_KEY
 
-    # Retail test with gemini-2.5-flash-lite-preview-01-21 via OpenRouter
+    # Retail test with gemini-2.5-flash-lite-preview via OpenRouter
     - name: retail-test-gemini-2.5-flash-lite-preview-09-2025
-      path: ${DATA_DIR}/retail_test_tasks.jsonl@[0:10]
+      path: ${oc.env:DATA_DIR}/retail_test_tasks.jsonl@[0:10]
       metadata_overrides:
         user_model: openrouter/google/gemini-2.5-flash-lite-preview-09-2025
         user_base_url: https://openrouter.ai/api/v1
         user_api_key_var: OPENROUTER_API_KEY
 
-    # Retail test with claude-3.5-sonnet via OpenRouter
+    # Retail test with gpt-oss-120b via OpenRouter
     - name: retail-test-gpt-oss-120b
-      path: ${DATA_DIR}/retail_test_tasks.jsonl@[0:10]
+      path: ${oc.env:DATA_DIR}/retail_test_tasks.jsonl@[0:10]
       metadata_overrides:
         user_model: openrouter/openai/gpt-oss-120b
         user_base_url: https://openrouter.ai/api/v1
