--- a/examples/tau2-bench/eval_config.yaml
+++ b/examples/tau2-bench/eval_config.yaml
@@ -12,6 +12,8 @@ eval:
     - name: retail-test-deepseek-v3.2
       path: ${oc.env:DATA_DIR}/retail_test_tasks.jsonl@[0:5]
       metadata_overrides:
+        domain: retail
+        task_split: test
         user_model: openrouter/deepseek/deepseek-v3.2
         user_base_url: https://openrouter.ai/api/v1
         user_api_key_var: OPENROUTER_API_KEY
@@ -20,6 +22,8 @@ eval:
     - name: retail-test-gemini-2.5-flash-lite-preview-09-2025
       path: ${oc.env:DATA_DIR}/retail_test_tasks.jsonl@[0:5]
       metadata_overrides:
+        domain: retail
+        task_split: test
         user_model: openrouter/google/gemini-2.5-flash-lite-preview-09-2025
         user_base_url: https://openrouter.ai/api/v1
         user_api_key_var: OPENROUTER_API_KEY
@@ -28,6 +32,8 @@ eval:
     - name: retail-test-gpt-oss-120b
       path: ${oc.env:DATA_DIR}/retail_test_tasks.jsonl@[0:5]
       metadata_overrides:
+        domain: retail
+        task_split: test
         user_model: openrouter/openai/gpt-oss-120b
         user_base_url: https://openrouter.ai/api/v1
         user_api_key_var: OPENROUTER_API_KEY
